# Cardiac-Conduction-model-with-Electric-Field-Mechanism_Findray-Suzuki-Kurachi-2008

./: README.md
FSK-conduction-model-3membrane_segment_version/: Makefile.am  Makefile.in  README  configure  configure.ac  in
FSK-conduction-model-3membrane_segment_version/check_test/: in
FSK-conduction-model-3membrane_segment_version/src/: data_out.c  eular.c  exptable.c  fsk.c  input_para.c  linear_mat.c  mem.c  syspara.h  system.c  var_consts.c
FSK-conduction-model-5membrane_segment_version/: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac
FSK-conduction-model-5membrane_segment_version/check_test/: in
FSK-conduction-model-5membrane_segment_version/sh/: cv.awk  cv.sh
FSK-conduction-model-5membrane_segment_version/src/: data_out.c  eular.c  exptable.c  fsk.c  input_para.c  linear_mat.c  mem.c  pardiso_mat.c  syspara.h  system.c  var_consts.c
